new:[kit]: button block and fix some button dark mode

--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -13,6 +13,7 @@ import { OutlineColor } from '@/components/docs/components/button/OutlineColor';
 import { GhostColor } from '@/components/docs/components/button/GhostColor';
 import { SoftColor } from '@/components/docs/components/button/SoftColor';
 import { Animations } from '@/components/docs/components/button/Animations';
+import { Block } from '@/components/docs/components/button/Block';
 import { Disabled } from '@/components/docs/components/button/Disabled';
 import { Gradient } from '@/components/docs/components/button/Gradient';
 import { Loading } from '@/components/docs/components/button/Loading';
@@ -51,6 +52,9 @@ export const getStaticProps = async ({ locale }) => {
   </a>
   <a href="#animations" className="sidebar__link">
     Animations
+  </a>
+  <a href="#block" className="sidebar__link">
+    Block
   </a>
   <a href="#disabled" className="sidebar__link">
     Disabled
@@ -512,7 +516,34 @@ export const getStaticProps = async ({ locale }) => {
         }
       }
 ````
+</Code>
 
+<div id="block" />
+
+<ComponentExample name="Block" paragraph="">
+  <Block />
+</ComponentExample>
+
+<Code>
+  ```jsx
+      <button
+        type="button"
+        disabled
+        className="rounded-lg md:rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm font-medium
+        text-white bg-blue-600 enabled:hover:bg-blue-500 disabled:opacity-75
+        disabled:cursor-not-allowed enabled:cursor-pointer disabled:select-none"
+        >
+        Disabled
+      </button>
+      <button
+        type="button"
+        disabled
+        className="rounded-lg md:rounded-xl py-2 px-4 md:py-3 md:px-6 text-xs md:text-sm border font-medium
+        bg-white text-gray-500 shadow-sm cursor-not-allowed dark:bg-gray-800
+        dark:hover:bg-slate-800 dark:border-gray-700 dark:text-gray-400 disabled:select-none">
+        Disabled
+      </button>
+  ```
 </Code>
 
 <div id="disabled" />
@@ -543,6 +574,7 @@ export const getStaticProps = async ({ locale }) => {
       </button>
   ```
 </Code>
+
 
 <div id="gradient" />
 
