bugfix: text float, block button text, scrollbar

--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -54,7 +54,7 @@ export const getStaticProps = async ({ locale }) => {
     Animations
   </a>
   <a href="#block" className="sidebar__link">
-    Block
+    Block Button
   </a>
   <a href="#disabled" className="sidebar__link">
     Disabled
@@ -520,7 +520,7 @@ export const getStaticProps = async ({ locale }) => {
 
 <div id="block" />
 
-<ComponentExample name="Block" paragraph="">
+<ComponentExample name="Block Button" paragraph=".w-full or .grid classes will make the button fit to its parent width.">
   <Block />
 </ComponentExample>
 
