new:[kit]: input with helper text

--- a/pages/docs/components/input.mdx
+++ b/pages/docs/components/input.mdx
@@ -9,6 +9,7 @@ import { PrevAndNext } from '@/components/layout/PrevAndNext';
 import { Basic } from '@/components/docs/components/input/Basic';
 import { Label } from '@/components/docs/components/input/Label';
 import { FloatingLabel } from '@/components/docs/components/input/FloatingLabel';
+import { HelperText } from '@/components/docs/components/input/HelperText';
 import { Icon } from '@/components/docs/components/input/Icon';
 import { Color } from '@/components/docs/components/input/Color';
 import { Tailwind } from '@/components/docs/components/input/Tailwind';
@@ -36,8 +37,8 @@ export const getStaticProps = async ({ locale }) => {
   <a href="#floatingLabel" className="text-right">
     Floating Label
   </a>
-  <a href="#withButton" className="text-right">
-    With button
+  <a href="#helperText" className="text-right">
+    Helper Text
   </a>
   <a href="#tailwind" className="text-right">
     Tailwind css
@@ -135,7 +136,43 @@ export const getStaticProps = async ({ locale }) => {
           placeholder="Zayniddinov"
         />
       </div>
+````
+</Code>
 
+<div id="helperText"></div>
+
+<ComponentExample
+  name="Helper Text"
+  paragraph="Basic input example with helper text.">
+  <HelperText />
+</ComponentExample>
+
+<Code>
+```jsx
+   <div className="flex flex-col space-y-1 md:space-y-2">
+      <label
+        className="text-xs md:text-sm font-medium">
+        Helper text
+      </label>
+      <input
+        type="text"
+        className="px-3 py-2 md:py-3 md:px-4 block w-full md:w-[18rem] xl:w-[22rem] rounded-lg md:rounded-xl text-sm border-2 ring-2ring-transparent border-gray-200 hover:border-blue-200 outline-none focus:ring-blue-300  dark:bg-gray-800 dark:hover:bg-slate-800dark:border-gray-700 dark:text-gray-400 duration-300"
+        placeholder="Example one"
+      />
+      <p className='text-sm text-gray-500 mt-2'>We wll never share your details.</p>
+    </div>
+    <div className="flex flex-col md:flex-row md:items-center space-y-1 md:space-x-2">
+      <label
+        className="text-xs md:text-sm font-medium">
+        Inline helper text
+      </label>
+      <input
+        type="text"
+        className="px-3 py-2 md:py-3 md:px-4 block w-full md:w-[18rem] xl:w-[22rem] rounded-lg md:rounded-xl text-sm border-2 ring-2ring-transparent border-gray-200 hover:border-blue-200 outline-none focus:ring-blue-300  dark:bg-gray-800 dark:hover:bg-slate-800dark:border-gray-700 dark:text-gray-400 duration-300"
+        placeholder="Example two"
+      />
+      <p className='text-sm text-gray-500 mt-2'>We wll never share your details.</p>
+    </div>
 ````
 </Code>
 
