core: create new sidebar sections

--- a/pages/docs/customization/configuration.mdx
+++ b/pages/docs/customization/configuration.mdx
@@ -4,8 +4,8 @@ import { NestedLayout } from '@/components/layout/NestedLayout';
 import { PrevAndNext } from '@/components/layout/PrevAndNext';
 
 export const meta = {
-  name: 'Colors',
-  title: 'Colors | Lazydev ui components',
+  name: 'Configuration',
+  title: 'Configuration | Lazydev ui components',
 };
 
 export const getStaticProps = async ({ locale }) => {
