--- a/pages/docs/components/card.mdx
+++ b/pages/docs/components/card.mdx
@@ -78,8 +78,8 @@ export const Default = () => {
             alt="card image"
           />
           <div className="absolute bottom-3 left-4 flex items-center space-x-2">
-            <span className="p-1.5 rounded-lg bg-white hover:bg-red-500 flex items-center justify-center w-fit duration-200 group">
-              <BsHeartFill className="text-sm text-red-500 group-hover:text-white" />
+            <span className="p-1.5 rounded-lg bg-white hover:bg-rose-500 flex items-center justify-center w-fit duration-200 group">
+              <BsHeartFill className="text-sm text-rose-500 group-hover:text-white" />
             </span>
             <span className="p-1.5 rounded-lg bg-white hover:bg-blue-500 flex items-center justify-center w-fit duration-200 space-x-1 group">
               <RiMessage3Fill className="text-sm text-blue-500 group-hover:text-white" />
@@ -128,8 +128,8 @@ export const Commerce = () => {
             alt="card image"
           />
           <div className="absolute bottom-3 left-4 flex items-center space-x-2">
-            <span className="p-1.5 rounded-lg bg-white hover:bg-red-500 flex items-center justify-center w-fit duration-200 group">
-              <BsHeartFill className="text-sm text-red-500 group-hover:text-white" />
+            <span className="p-1.5 rounded-lg bg-white hover:bg-rose-500 flex items-center justify-center w-fit duration-200 group">
+              <BsHeartFill className="text-sm text-rose-500 group-hover:text-white" />
             </span>
             <span className="p-1.5 rounded-lg bg-white hover:bg-blue-500 flex items-center justify-center w-fit duration-200 space-x-1 group">
               <RiMessage3Fill className="text-sm text-blue-500 group-hover:text-white" />
@@ -175,8 +175,8 @@ export const TypeA = () => {
           <div className="relative w-full scale-100">
             <img className="rounded-xl" src={YourImage} alt="card image" />
             <div className="absolute bottom-3 left-4 flex items-center space-x-2">
-              <span className="p-1.5 rounded-lg bg-white hover:bg-red-500 flex items-center justify-center w-fit group duration-200">
-                <BsHeartFill className="text-sm text-red-500 group-hover:text-white" />
+              <span className="p-1.5 rounded-lg bg-white hover:bg-rose-500 flex items-center justify-center w-fit group duration-200">
+                <BsHeartFill className="text-sm text-rose-500 group-hover:text-white" />
               </span>
               <span className="p-1.5 rounded-lg bg-white hover:bg-blue-500 flex items-center justify-center w-fit group duration-200 space-x-1">
                 <RiMessage3Fill className="text-sm text-blue-500 group-hover:text-white" />
@@ -230,7 +230,7 @@ export const TypeB = () => {
           />
           <div className="absolute top-3 left-4 flex items-center space-x-2 cursor-pointer">
             <span className="p-1.5 rounded-lg bg-white flex items-center justify-center w-fit duration-200 hover:-translate-y-1">
-              <BsHeartFill className="text-sm text-red-500" />
+              <BsHeartFill className="text-sm text-rose-500" />
             </span>
             <span className="p-1.5 rounded-lg bg-white flex items-center justify-center w-fit duration-200 space-x-1 hover:-translate-y-1">
               <RiMessage3Fill className="text-sm text-blue-500" />
